fix overflow, again

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -15,7 +15,10 @@ img.leading-image {
 }
 
 body {
-  overflow-x: hidden;
+  @include media-breakpoint-up(md) {
+    // when we're not using offcanvas, hide overflow for scrollbar vw bug
+    overflow-x: hidden;
+  }
 }
 
 @if $enable-flex {
